@@ -489,6 +489,14 @@ Instrumentation.prototype.bindEmitter = function (ee) {
   return this._runCtxMgr.bindEE(this._runCtxMgr.active(), ee)
 }
 
+// Bind the given EventEmitter to a given run context.
+Instrumentation.prototype.bindEmitterToRunContext = function (runContext, ee) {
+  if (!this._started) {
+    return ee
+  }
+  return this._runCtxMgr.bindEE(runContext, ee)
+}
+
 // Return true iff the given EventEmitter is bound to a run context.
 Instrumentation.prototype.isEventEmitterBound = function (ee) {
   if (!this._started) {
